# CSV-Handler

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
bash/: makerun.bash
csv-v2/: CMakeLists.txt  readme.md
csv-v2/data/: info.csv
csv-v2/src/: main.cpp
csv-v2/src/include/: csv-v2.h
data/: info.csv  point3f.csv  point3f_h.csv  point3f_ofs.csv  refpoint3f.csv  refpoint3f_h.csv
docs/: CSV.puml  Doxyfile  macroes.puml
docs/html/: annotated.html  classes.html  classns__csv_1_1_c_s_v_reader-members.html  classns__csv_1_1_c_s_v_reader.html  classns__csv_1_1_c_s_v_writer-members.html  classns__csv_1_1_c_s_v_writer.html  csv_8h.html  csv_8h__incl.map  csv_8h__incl.md5  csv_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacens__csv.html  namespacens__csv_1_1ns__priv.html  namespaces.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  defines_1.js  (+12 more)
docs/latex/: annotated.tex  classns__csv_1_1_c_s_v_reader.tex  classns__csv_1_1_c_s_v_writer.tex  csv_8h.tex  csv_8h__incl.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  namespacens__csv.tex  namespacens__csv_1_1ns__priv.tex  namespaces.tex  refman.tex
include/: csv.h  csvhandler.h
src/: CMakeLists.txt  main.cpp
src/include/: csv.h
test/: CMakeLists.txt  test_main.cpp
test/include/: helper.h  reader.h  writer.h
